[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakewkhtmltopdf"
version = "0.1.0"
description = "A wkhtmltopdf-compatible wrapper that uses plutoprint under the hood"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
urls = {repository = "https://github.com/yaroslaff/fakewkhtmltopdf"}
keywords = ["pdf", "html", "wkhtmltopdf", "plutoprint", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "plutoprint",
]

[project.scripts]
wkhtmltopdf = "fakewkhtmltopdf.cli:main"

[tool.setuptools]
packages = ["fakewkhtmltopdf"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

